--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "author": "brian@betaworks.com",
   "description": "Upvote for awesome, downvote for foolish",
   "dependencies": {
-    "hubot": "^2.11.4",
+    "hubot": "~2.19",
     "hubot-diagnostics": "0.0.1",
     "hubot-heroku-keepalive": "0.0.4",
     "hubot-redis-brain": "0.0.2",
     "hubot-scripts": "^2.5.16",
-    "hubot-slack": "^3.3.0"
+    "hubot-slack": "^4.3.3"
   },
   "engines": {
     "node": "0.10.x"
